WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25440
setTimeout should stringify non-string/non-function first arguments
https://bugs.webkit.org/show_bug.cgi?id=25440
Summary
setTimeout should stringify non-string/non-function first arguments
Sam Weinig
Reported
2009-04-28 00:07:07 PDT
Per WebIDL, setTimeout should stringify non-string/non-function first arguments.
Attachments
patch
(6.77 KB, patch)
2009-04-29 23:24 PDT
,
Sam Weinig
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-04-28 12:08:48 PDT
***
Bug 25441
has been marked as a duplicate of this bug. ***
Sam Weinig
Comment 2
2009-04-29 23:24:19 PDT
Created
attachment 29903
[details]
patch
Oliver Hunt
Comment 3
2009-04-29 23:32:12 PDT
Comment on
attachment 29903
[details]
patch you should stop running if toString results in an exception (esp. for setInterval, we don't want a timer for a code that does nothing); Also add tests to cover setInterval
Sam Weinig
Comment 4
2009-04-29 23:48:35 PDT
Fixed with Oliver's suggestions implemented in
r43046
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug