WebCore:

2009-04-29  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=25440
        setTimeout should stringify non-string/non-function first arguments

        Test: fast/dom/Window/setTimeout-string-argument.html

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::setTimeout):
        (WebCore::JSDOMWindow::setInterval):
        * bindings/js/JSWorkerContextCustom.cpp:
        (WebCore::JSWorkerContext::setTimeout):
        (WebCore::JSWorkerContext::setInterval):
        * bindings/js/ScheduledAction.cpp:
        (WebCore::ScheduledAction::create):
        * bindings/js/ScheduledAction.h:

LayoutTests:

2009-04-29  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Test for https://bugs.webkit.org/show_bug.cgi?id=25440
        setTimeout should stringify non-string/non-function first arguments

        * fast/dom/Window/setTimeout-string-argument-expected.txt: Added.
        * fast/dom/Window/setTimeout-string-argument.html: Added.



Canonical link: https://commits.webkit.org/35092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43046 268f45cc-cd09-0410-ab3c-d52691b4dbfc